tightened up ChannelRouter, changed it to accept Envelope, made it respect Destination header value

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -83,10 +83,12 @@
     <Compile Include="Runtime\BinarySerializer.cs" />
     <Compile Include="Runtime\CascadingHandlerInvoker.cs" />
     <Compile Include="Configuration\ChannelNode.cs" />
+    <Compile Include="Runtime\ChannelRouter.cs" />
     <Compile Include="Runtime\DictionaryHeaders.cs" />
     <Compile Include="Runtime\Envelope.cs" />
     <Compile Include="Runtime\EnvelopeSerializer.cs" />
     <Compile Include="Runtime\IChannel.cs" />
+    <Compile Include="Runtime\IChannelRouter.cs" />
     <Compile Include="Runtime\IEnvelopeSender.cs" />
     <Compile Include="Runtime\IHeaders.cs" />
     <Compile Include="Runtime\IMessageCallback.cs" />
@@ -104,6 +106,7 @@
     <Compile Include="Runtime\Routing\SingleTypeRoutingRule.cs" />
     <Compile Include="Runtime\RuntimeClasses.cs" />
     <Compile Include="Runtime\SimpleHandlerInvoker.cs" />
+    <Compile Include="Runtime\UnknownChannelException.cs" />
     <Compile Include="Runtime\UnknownContentTypeException.cs" />
     <Compile Include="Runtime\XmlMessageSerializer.cs" />
     <Compile Include="StringExtensions.cs" />
