--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Runtime\IMessageCallback.cs" />
     <Compile Include="Runtime\IMessageInvoker.cs" />
     <Compile Include="Runtime\IMessageSerializer.cs" />
+    <Compile Include="Runtime\IOutgoingMessages.cs" />
     <Compile Include="Runtime\IReceiver.cs" />
     <Compile Include="Runtime\ITransport.cs" />
     <Compile Include="Runtime\MessageInvoker.cs" />
@@ -104,7 +105,7 @@
     <Compile Include="Runtime\Routing\LambdaRoutingRule.cs" />
     <Compile Include="Runtime\Routing\NamespaceRule.cs" />
     <Compile Include="Runtime\Routing\SingleTypeRoutingRule.cs" />
-    <Compile Include="Runtime\RuntimeClasses.cs" />
+    <Compile Include="Runtime\OutgoingMessages.cs" />
     <Compile Include="Runtime\SimpleHandlerInvoker.cs" />
     <Compile Include="Runtime\UnknownChannelException.cs" />
     <Compile Include="Runtime\UnknownContentTypeException.cs" />
