--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Runtime\multiple_handlers_for_one_message.cs" />
     <Compile Include="Runtime\HandlerArgumentsTester.cs" />
     <Compile Include="Runtime\ReceiverTester.cs" />
+    <Compile Include="Runtime\RecordingEnvelopeSender.cs" />
     <Compile Include="Runtime\Routing\AssemblyRuleTester.cs" />
     <Compile Include="Runtime\Routing\LambdaRoutingRuleTester.cs" />
     <Compile Include="Runtime\Routing\NamespaceRuleTester.cs" />
