--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -77,6 +77,7 @@
     <Compile Include="InMemory\InMemoryTransport.cs" />
     <Compile Include="IScenarioWriter.cs" />
     <Compile Include="IServiceBus.cs" />
+    <Compile Include="Logging\EventAggregationListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
     <Compile Include="Runtime\BatchHandler.cs" />
@@ -113,7 +114,9 @@
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TransportActivator.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="TestSupport\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
