--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -158,6 +158,7 @@
     <Compile Include="ScenarioSupport\ThreeMessage.cs" />
     <Compile Include="ScenarioSupport\TwoHandler.cs" />
     <Compile Include="ScenarioSupport\TwoMessage.cs" />
+    <Compile Include="TestSupport\MessageWatcherTester.cs" />
     <Compile Include="TransportActivatorTester.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -170,9 +171,7 @@
       <Name>TestMessages</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TestSupport\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
