auditing the EnvelopeSent event

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Logging\ChainExecutionFinished.cs" />
     <Compile Include="Logging\ChainExecutionStarted.cs" />
     <Compile Include="Logging\EnvelopeReceived.cs" />
+    <Compile Include="Logging\EnvelopeSent.cs" />
     <Compile Include="Logging\EventAggregationListener.cs" />
     <Compile Include="TestSupport\MessageWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
