--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -82,6 +82,9 @@
     <Compile Include="Logging\EnvelopeReceived.cs" />
     <Compile Include="Logging\EnvelopeSent.cs" />
     <Compile Include="Logging\EventAggregationListener.cs" />
+    <Compile Include="Logging\MessageFailed.cs" />
+    <Compile Include="Logging\MessageSuccessful.cs" />
+    <Compile Include="Logging\NoHandlerForMessage.cs" />
     <Compile Include="TestSupport\MessageWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
