--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Runtime\HandlerArgumentsTester.cs" />
     <Compile Include="Runtime\ReceiverTester.cs" />
     <Compile Include="Runtime\RecordingEnvelopeSender.cs" />
+    <Compile Include="Runtime\ReplyListenerTester.cs" />
     <Compile Include="Runtime\Routing\AssemblyRuleTester.cs" />
     <Compile Include="Runtime\Routing\LambdaRoutingRuleTester.cs" />
     <Compile Include="Runtime\Routing\NamespaceRuleTester.cs" />
