--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -58,10 +58,15 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Behaviors\InitiatingSagaHandlerBehavior.cs" />
+    <Compile Include="Behaviors\SagaHandlerBehavior.cs" />
     <Compile Include="Configuration\ChannelGraph.cs" />
+    <Compile Include="HandlerExtensions.cs" />
+    <Compile Include="Registration\Conventions\DefaultSagaConvention.cs" />
     <Compile Include="Registration\ExplicitTypeHandlerSource.cs" />
     <Compile Include="Configuration\FubuTransport.cs" />
     <Compile Include="Configuration\FubuTransportRegistry.cs" />
+    <Compile Include="Registration\FuncBuilder.cs" />
     <Compile Include="Registration\Nodes\HandlerCall.cs" />
     <Compile Include="Configuration\HandlerChain.cs" />
     <Compile Include="Configuration\HandlerGraph.cs" />
@@ -85,7 +90,10 @@
     <Compile Include="Logging\MessageFailed.cs" />
     <Compile Include="Logging\MessageSuccessful.cs" />
     <Compile Include="Logging\NoHandlerForMessage.cs" />
+    <Compile Include="InMemory\InMemorySagaRepository.cs" />
     <Compile Include="Runtime\ReplyListener.cs" />
+    <Compile Include="Registration\Nodes\SagaNode.cs" />
+    <Compile Include="Runtime\ISagaRepository.cs" />
     <Compile Include="TestSupport\MessageWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
@@ -123,6 +131,7 @@
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TransportActivator.cs" />
     <Compile Include="TransportSettings.cs" />
+    <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
