Uri extensions to normalize the Uri w/ localhost/12.0.0.1, spiking on TransportBase

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Configuration\ChannelGraphTester.cs" />
     <Compile Include="Configuration\ChannelNodeTester.cs" />
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
+    <Compile Include="Configuration\UriExtensionsTester.cs" />
     <Compile Include="HandlerExtensionsTester.cs" />
     <Compile Include="InMemory\InMemorySagaRepositoryTester.cs" />
     <Compile Include="Registration\Conventions\DefaultSagaConventionTester.cs" />
