--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Behaviors\InitiatingSagaHandlerBehavior.cs" />
     <Compile Include="Behaviors\SagaHandlerBehavior.cs" />
     <Compile Include="Configuration\ChannelGraph.cs" />
+    <Compile Include="Configuration\UriExtensions.cs" />
     <Compile Include="HandlerExtensions.cs" />
     <Compile Include="NewSagaSpike.cs" />
     <Compile Include="Registration\Conventions\DefaultSagaConvention.cs" />
