converted InMemoryTransport to the new TransportBase

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Runtime\generic_handlers_are_called_for_messages_that_match.cs" />
     <Compile Include="Runtime\handling_a_batch_of_messages.cs" />
     <Compile Include="Runtime\Headers_testing.cs" />
+    <Compile Include="Runtime\InMemoryReplyQueueIntegratedTester.cs" />
     <Compile Include="Runtime\multiple_handlers_for_one_message.cs" />
     <Compile Include="Runtime\HandlerArgumentsTester.cs" />
     <Compile Include="Runtime\ReceiverTester.cs" />
