--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -107,7 +107,7 @@
     <Compile Include="Runtime\BasicJsonMessageSerializerTester.cs" />
     <Compile Include="Runtime\BinarySerializerTester.cs" />
     <Compile Include="Runtime\CascadingHandlerInvokerTester.cs" />
-    <Compile Include="Runtime\ChannelRouterTester.cs" />
+    <Compile Include="Runtime\SubscriptionsTester.cs" />
     <Compile Include="Runtime\EnvelopeSenderTester.cs" />
     <Compile Include="Runtime\EnvelopeSerializerIntegratedTester.cs" />
     <Compile Include="Runtime\EnvelopeSerializerTester.cs" />
