--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Runtime\ReplyListener.cs" />
     <Compile Include="Registration\Nodes\SagaNode.cs" />
     <Compile Include="Runtime\ISagaRepository.cs" />
+    <Compile Include="Runtime\ServiceHub.cs" />
     <Compile Include="TestSupport\MessageWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
