--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Runtime\InvocationContext.cs" />
     <Compile Include="Runtime\SimpleHandlerInvokerTester.cs" />
     <Compile Include="Runtime\when_requesting_a_response.cs" />
+    <Compile Include="Runtime\when_sending_with_the_expectation_of_a_response.cs" />
     <Compile Include="Runtime\when_starting_the_subscriptions.cs" />
     <Compile Include="ScenarioRunner.cs" />
     <Compile Include="ScenarioSupport\SourceRecordingHandler.cs" />
