--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Runtime\ISagaRepository.cs" />
     <Compile Include="Runtime\TransportBase.cs" />
     <Compile Include="Sagas\SagaBehavior.cs" />
+    <Compile Include="Sagas\StatefulSagaConvention.cs" />
     <Compile Include="TestSupport\MessageWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
