--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Configuration\UriExtensionsTester.cs" />
     <Compile Include="HandlerExtensionsTester.cs" />
     <Compile Include="InMemory\InMemorySagaRepositoryTester.cs" />
+    <Compile Include="InMemory\SagaStateCacheTester.cs" />
     <Compile Include="Registration\FuncBuilderTester.cs" />
     <Compile Include="Registration\Nodes\HandlerCallTester.cs" />
     <Compile Include="Configuration\HandlerChainTester.cs" />
