Can now apply policies in a FubuTransportationRegistry either locally or globally.  Closes GH-3

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Configuration\ChannelNodeTester.cs" />
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
     <Compile Include="Configuration\UriExtensionsTester.cs" />
+    <Compile Include="FubuTransportRegistry_application_of_policies_Tester.cs" />
     <Compile Include="HandlerExtensionsTester.cs" />
     <Compile Include="InMemory\InMemorySagaRepositoryTester.cs" />
     <Compile Include="InMemory\InMemorySagaStorageTester.cs" />
