--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -68,6 +68,7 @@
     <Compile Include="InMemory\SagaStateCache.cs" />
     <Compile Include="Polling\DefaultTimer.cs" />
     <Compile Include="Polling\ITimer.cs" />
+    <Compile Include="Polling\JobRunner.cs" />
     <Compile Include="Runtime\Delayed\DelayedSpike.cs" />
     <Compile Include="Polling\PollingSpike.cs" />
     <Compile Include="Runtime\ChainExecutionWatcher.cs" />
