--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -71,6 +71,8 @@
     <Compile Include="Polling\JobRunner.cs" />
     <Compile Include="Polling\PollingJobActivator.cs" />
     <Compile Include="Polling\PollingJobDeactivator.cs" />
+    <Compile Include="Polling\PollingJobs.cs" />
+    <Compile Include="Polling\PollingServicesRegistry.cs" />
     <Compile Include="Runtime\Delayed\DelayedSpike.cs" />
     <Compile Include="Polling\PollingSpike.cs" />
     <Compile Include="Runtime\ChainExecutionWatcher.cs" />
