--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -67,13 +67,18 @@
     <Compile Include="InMemory\ISagaStateCache.cs" />
     <Compile Include="InMemory\SagaStateCache.cs" />
     <Compile Include="Polling\DefaultTimer.cs" />
+    <Compile Include="Polling\IJob.cs" />
+    <Compile Include="Polling\IPollingJob.cs" />
+    <Compile Include="Polling\IPollingJobs.cs" />
     <Compile Include="Polling\ITimer.cs" />
+    <Compile Include="Polling\JobRequest.cs" />
     <Compile Include="Polling\JobRunner.cs" />
     <Compile Include="Polling\PollingJob.cs" />
     <Compile Include="Polling\PollingJobActivator.cs" />
     <Compile Include="Polling\PollingJobDeactivator.cs" />
     <Compile Include="Polling\PollingJobs.cs" />
     <Compile Include="Polling\PollingServicesRegistry.cs" />
+    <Compile Include="Polling\RegisterPollingJobs.cs" />
     <Compile Include="Runtime\Delayed\DelayedSpike.cs" />
     <Compile Include="Polling\PollingSpike.cs" />
     <Compile Include="Runtime\ChainExecutionWatcher.cs" />
