--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
     <Compile Include="Configuration\UriExtensionsTester.cs" />
     <Compile Include="FubuTransportRegistry_application_of_policies_Tester.cs" />
+    <Compile Include="FubuTransportRegistry_registration_of_services_Tester.cs" />
     <Compile Include="FubuTransport_default_options_Tester.cs" />
     <Compile Include="HandlerExtensionsTester.cs" />
     <Compile Include="InMemory\InMemorySagaRepositoryTester.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Polling\DefaultTimerTester.cs" />
     <Compile Include="Polling\JobRunnerTester.cs" />
     <Compile Include="Polling\PollingJobActivatorTester.cs" />
+    <Compile Include="Polling\PollingJobIntegrationTester.cs" />
     <Compile Include="Polling\PollingJobTester.cs" />
     <Compile Include="Polling\PollingServicesRegistry_spec.cs" />
     <Compile Include="Registration\FuncBuilderTester.cs" />
