--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Runtime\BasicJsonMessageSerializerTester.cs" />
     <Compile Include="Runtime\BinarySerializerTester.cs" />
     <Compile Include="Runtime\CascadingHandlerInvokerTester.cs" />
+    <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessorTester.cs" />
     <Compile Include="Runtime\MessageInvokerTester.cs" />
     <Compile Include="Runtime\SubscriptionsIntegrationTester.cs" />
     <Compile Include="Runtime\EnvelopeSenderTester.cs" />
