--- a/src/FubuTransportation.RhinoQueues.Testing/FubuTransportation.RhinoQueues.Testing.csproj
+++ b/src/FubuTransportation.RhinoQueues.Testing/FubuTransportation.RhinoQueues.Testing.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Full_end_to_end_delayed_message_processing_with_in_memory_queues.cs" />
     <Compile Include="PersistentQueueTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RhinoQueuesChannelTester.cs" />
